# ChemBioCatalyst

./: .gitignore  .gitmodules  Dockerfile  README.md  cpad-gitops-pipeline.yml  docker-compose.yml  environment.yml  generate_app.py  generated_app.py  menu_config.json  pyproject.toml  requirements.txt
.github/workflows/: cpad-gitops-pipeline.yml
app_DeepCoSI/: main.py
binding_site_and_interaction_analysis/: deepcosi.py
cheminformatics_and_molecular_property_prediction/: explore_chemical_space.py  lle_calculator.py  logd_prediction.py  logp_calculation.py  nearest_neighbours.py  pka_prediction.py  query_enamine_api.py  smiles_explorer.py  tanimoto_similarity_calculator.py  template.py
interface/: Dockerfile  app.py  environment.yml
molecular_shape_and_scaffold_analysis/: pmi_calculator.py  scaffold_graph.py
nginx/: nginx.conf
protein_and_peptide_analysis/: protparam.py  template.py  transpose_peptide_sequences.py
structure_prediction_and_modelling/: alphastream.py
